@@ -319,10 +319,10 @@ namespace MeGUI
                     DefaultSubtitleLanguage.Add(MainForm.Instance.Settings.DefaultLanguage2);
             }
             IndexerPriority.Add(FileIndexerWindow.IndexType.DGI.ToString());
-            IndexerPriority.Add(FileIndexerWindow.IndexType.DGA.ToString());
             IndexerPriority.Add(FileIndexerWindow.IndexType.D2V.ToString());
             IndexerPriority.Add(FileIndexerWindow.IndexType.FFMS.ToString());
             IndexerPriority.Add(FileIndexerWindow.IndexType.AVISOURCE.ToString());
+            IndexerPriority.Add(FileIndexerWindow.IndexType.DGA.ToString());
 		}
 
         #region GenericSettings Members
